mdapi/Custom/objects/Property_Invoice__c.object
<CustomObject>
    <description>Deployed Via Permission Set.This is a holding place to support a future state w/ rehab actuals/invoices.</description>
    <fields>
        <fullName>Approved_By__c</fullName>
        <formula>Case (Rehab__r.Region__c ,

&quot;Atlanta&quot;,&quot;James Turner&quot;, 
&quot;Charlotte&quot;,&quot;Doug Mann&quot;, 
&quot;Chicago&quot;,IF( Rehab__r.Property_State__c = &quot;MN&quot;, &quot;Greg Halleland&quot;, &quot;Bryan Henson&quot;), 
&quot;Inland Empire&quot;,&quot;Jay Skjevren&quot;, 
&quot;Jacksonville&quot;,&quot;Ken Mitchell&quot;, 
&quot;Las Vegas&quot;,&quot;Michael Murphy&quot;, 
&quot;Los Angeles&quot;,&quot;George Bishop&quot;, 
&quot;Miami&quot;,&quot;Doug Wilson&quot;, 
&quot;Orlando&quot;,&quot;William Redding&quot;, 
&quot;Phoenix&quot;,&quot;Steve Letcher&quot;, 
&quot;Sacramento&quot;,&quot;Scotte Henderson&quot;, 
&quot;Seattle&quot;,&quot;Jeff Taylor&quot;, 
&quot;Tampa&quot;,&quot;Alexis Antoni&quot;,Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Account__c</fullName>
        <formula>Case( Rehab__r.Region__c ,
&quot;Atlanta&quot;, &quot;1003100&quot;,
&quot;XXXX&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed_Payment_To_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Payment To Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Payment__c</fullName>
        <label>Confirmed Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_to_Yardi__c</fullName>
        <description>Date this was sent in a batch to Yardi</description>
        <label>Date Submitted to Yardi</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Wrong GL Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Code_Original__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Code</label>
        <referenceTo>GL_Code__c</referenceTo>
        <relationshipLabel>Property Invoices</relationshipLabel>
        <relationshipName>Property_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Code_Type_Adjusted__c</fullName>
        <formula>IF( ISPICKVAL( Rehab__r.Type__c, &apos;Post-Acquisition&apos; ), 
IF( ISBLANK( GL_Code_Original__r.GL_Code_Acquisition__c ) 
, GL_Code_Original__r.Name, 
GL_Code_Original__r.GL_Code_Acquisition__r.Name 
), 
IF( ISBLANK( GL_Code_Original__r.GL_Code_Turn__c ) , 
GL_Code_Original__r.Name, 
GL_Code_Original__r.GL_Code_Turn__r.Name 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Code Type Adjusted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Code__c</fullName>
        <description>IF NEW GL CODES ARE ADDED - THEY ALSO NEED TO BE ADDED TO THE CHANGE ORDER AND THE YARDI INVOICE FORMULA NEEDS TO BE UPDATED</description>
        <label>GL Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1260100 - Rehab Other</fullName>
                </value>
                <value>
                    <fullName>1260125 - Rehab Demo/Waste</fullName>
                </value>
                <value>
                    <fullName>1260140 - Rehab Pests/Termites</fullName>
                </value>
                <value>
                    <fullName>1260150 - Rehab Cleaning</fullName>
                </value>
                <value>
                    <fullName>1260175 - Rehab Initial Re-Key</fullName>
                </value>
                <value>
                    <fullName>1260200 - Rehab General Contractor</fullName>
                </value>
                <value>
                    <fullName>1260210 - Rehab GC Change Order</fullName>
                </value>
                <value>
                    <fullName>1260300 - Rehab Roofs</fullName>
                </value>
                <value>
                    <fullName>1260325 - Rehab Garage and Garage Doors</fullName>
                </value>
                <value>
                    <fullName>1260350 - Rehab Exterior Surfaces</fullName>
                </value>
                <value>
                    <fullName>1260375 - Rehab Sidewalks/Driveways</fullName>
                </value>
                <value>
                    <fullName>1260400 - Rehab Cabinets</fullName>
                </value>
                <value>
                    <fullName>1260425 - Rehab Interior Painting</fullName>
                </value>
                <value>
                    <fullName>1260450 - Rehab Flooring</fullName>
                </value>
                <value>
                    <fullName>1260475 - Rehab Door/Window Costs</fullName>
                </value>
                <value>
                    <fullName>1260480 - Rehab Blinds</fullName>
                </value>
                <value>
                    <fullName>1260500 - Rehab Countertops</fullName>
                </value>
                <value>
                    <fullName>1260600 - Rehab Landscape</fullName>
                </value>
                <value>
                    <fullName>1260700 - Rehab Pool Service Fees</fullName>
                </value>
                <value>
                    <fullName>1260710 - Rehab Pool Maintenance Costs</fullName>
                </value>
                <value>
                    <fullName>1260800 - Rehab Appliances</fullName>
                </value>
                <value>
                    <fullName>1260825 - Rehab Specialty Electric</fullName>
                </value>
                <value>
                    <fullName>1260850 - Rehab Specialty Plumbing</fullName>
                </value>
                <value>
                    <fullName>1260900 - Rehab HVAC</fullName>
                </value>
                <value>
                    <fullName>1260910 - Rehab Utilities</fullName>
                </value>
                <value>
                    <fullName>1260915 - Rehab Utilities Prior Ownership</fullName>
                </value>
                <value>
                    <fullName>1261000 - Rehab Capitalized Insurance</fullName>
                </value>
                <value>
                    <fullName>1261100 - Rehab Capitalized Tax</fullName>
                </value>
                <value>
                    <fullName>1261200 - Rehab Capitalized Interest</fullName>
                </value>
                <value>
                    <fullName>1261300 - Rehab Capitalized HOA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_in_Yardi_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you would like this invoice included in the next batch upload</description>
        <inlineHelpText>Check this box if you would like this invoice included in the next batch upload</inlineHelpText>
        <label>Include in Yardi Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Print_on_Check_Stub__c</fullName>
        <label>Notes (Print on Check Stub)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Month__c</fullName>
        <formula>TEXT(Month( Date_Paid__c))&amp;&quot;-&quot;&amp; TEXT(YEAR(Date_Paid__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rehab_Projected_Spend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rehab Projected Spend</label>
        <referenceTo>Rehab_Projected_Spend__c</referenceTo>
        <relationshipLabel>Property Invoices</relationshipLabel>
        <relationshipName>Property_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rehab__c</fullName>
        <label>Rehab</label>
        <referenceTo>Rehab__c</referenceTo>
        <relationshipLabel>Property Invoices</relationshipLabel>
        <relationshipName>Property_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Remarks_Appears_on_GL__c</fullName>
        <formula>Notes_Print_on_Check_Stub__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remarks (Appears on GL)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if we need to resubmit</inlineHelpText>
        <label>Resubmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_Check_to__c</fullName>
        <label>Return Check to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Region Office</fullName>
                    <default>true</default>
                    <label>Region Office</label>
                </value>
                <value>
                    <fullName>Send to Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due on Receipt</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tran__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Tran #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>&quot;I&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNIQUE_Invoice_for_dedupe__c</fullName>
        <description>Used as the Unique Identifier for Invoices.</description>
        <label>UNIQUE Invoice # for dedupe</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <formula>Vendor__r.Yardi_vendor_code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Salesforce_Id__c</fullName>
        <formula>Vendor__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Salesforce Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Property Invoices</relationshipLabel>
        <relationshipName>Property_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Yardi_Code__c</fullName>
        <formula>Rehab__r.Yardi_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yardi Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Invoice_Formula__c</fullName>
        <formula>Vendor__r.Yardi_vendor_code__c &amp; &quot;-&quot; &amp; Invoice_Number__c &amp; &quot;-&quot; &amp;  
 CASE(GL_Code__c,
&quot;1260100 Rehab&quot;,&quot;1260100&quot;,
&quot;1260200 Rehab General Contractor&quot;,&quot;1260200&quot;,
&quot;1260210 Rehab GC Change Order&quot;,&quot;1260210&quot;,
&quot;1260300 Rehab Roofs&quot;,&quot;1260300&quot;,
&quot;1260400 Rehab Cabinets&quot;,&quot;1260400&quot;,
&quot;1260500 Rehab Countertops&quot;,&quot;1260500&quot;,
&quot;1260600 Rehab Landscape&quot;,&quot;1260600&quot;,
&quot;GL TBD Blinds&quot;,&quot;GL TBD Blinds&quot;,
&quot;GL TBD Cleaning&quot;,&quot;GL TBD Cleaning&quot;,
&quot;GL TBD Electrical&quot;,&quot;GL TBD Electrical&quot;,
&quot;GL TBD Flooring&quot;,&quot;GL TBD Flooring&quot;,
&quot;GL TBD Locks &amp; Keys&quot;,&quot;GL TBD Locks &amp; Keys&quot;,
&quot;GL TBD Pest Control&quot;,&quot;GL TBD Pest Control&quot;,
&quot;GL TBD Plumbing&quot;,&quot;GL TBD Plumbing&quot;,
&quot;GL TBD Waste Removal&quot;,&quot;GL TBD Waste Removal&quot;,
&quot;1260700 Rehab Pools&quot;,&quot;1260700&quot;,
&quot;1260800 Rehab Appliances&quot;,&quot;1260800&quot;,
&quot;1260900 Rehab HVAC&quot;,&quot;1260900&quot;,
&quot;1260910 Rehab Utilities&quot;,&quot;1260910&quot;,
&quot;1260915 Rehab Utilities Prior Ownership&quot;,&quot;1260915&quot;,
&quot;GL CODE DOES NOT MATCH&quot;)</formula>
        <label>Yardi Invoice Formula</label>
        <type>Text</type>
    </fields>
    <label>Property Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Tran__c</columns>
        <columns>Vendor_Code__c</columns>
        <columns>Vendor__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Post_Month__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Comments__c</columns>
        <columns>Yardi_Code__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>GL_Code__c</columns>
        <columns>Remarks_Appears_on_GL__c</columns>
        <columns>Return_Check_to__c</columns>
        <columns>Approved_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Invoices_Entered_but_not_Flagged</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Tran__c</columns>
        <columns>Vendor_Code__c</columns>
        <columns>Vendor__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Post_Month__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Comments__c</columns>
        <columns>Yardi_Code__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>GL_Code__c</columns>
        <columns>Remarks_Appears_on_GL__c</columns>
        <columns>Return_Check_to__c</columns>
        <columns>Approved_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Include_in_Yardi_Batch__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Date_Submitted_to_Yardi__c</field>
            <operation>equals</operation>
        </filters>
        <label>Invoices Entered but not Flagged</label>
    </listViews>
    <listViews>
        <fullName>Invoices_that_need_submission</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Tran__c</columns>
        <columns>Vendor_Code__c</columns>
        <columns>Vendor__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Post_Month__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Comments__c</columns>
        <columns>Yardi_Code__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>GL_Code__c</columns>
        <columns>Remarks_Appears_on_GL__c</columns>
        <columns>Return_Check_to__c</columns>
        <columns>Approved_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Include_in_Yardi_Batch__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Date_Submitted_to_Yardi__c</field>
            <operation>equals</operation>
        </filters>
        <label>Invoices that need submission</label>
    </listViews>
    <nameField>
        <displayFormat>PropInvoice-{0000}</displayFormat>
        <label>Property Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>